# Data-Compression

./: CMakeLists.txt  README.md  main.cpp
Lossless/LempelZiv/: LZ77.cpp  LZ77.h  LZ78.cpp  LZ78.h
Resources/: lz78Decomp.txt  medium.txt  outputTiny.txt  small.txt  tiny.txt
Utilities/: FileReader.h
